# SAfe_tooling

./: .dockerignore  .gitignore  CLAUDE.md  CLAUDE_SECURITY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties  tqa.toml
.claude/agents/: python-backend.md  typescript-frontend.md
.claude/commands/: ci-check.md
.github/: dependabot.yml
.github/workflows/: auto-format.yml  ci.yml  codeql.yml  frontend-mutation.yml  mutation.yml  tqa.yml
docs/: openapi.yaml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  stryker.config.json  vite.config.ts  vitest.config.ts
frontend/e2e/: art-setup.spec.ts  backlog-mutations.spec.ts  backlog.spec.ts  board.spec.ts  capacity.spec.ts  dependencies-mutations.spec.ts  dependencies.spec.ts  global-setup.ts  helpers.ts  navigation.spec.ts  objectives-mutations.spec.ts  predictability.spec.ts  risks-mutations.spec.ts  risks.spec.ts  setup.spec.ts  stories.spec.ts  team-setup.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
safe/: dev_seed.py  exceptions.py
safe/api/: deps.py  main.py  schemas.py
safe/cli/: art.py  backlog.py  board.py  capacity.py  dependency.py  feature.py  main.py  objective.py  pi.py  risk.py  state.py  story.py  team.py
safe/logic/: board.py  capacity.py  pi.py  predictability.py  transactions.py  wsjf.py
scripts/: seed_pagination.py
tests/: conftest.py  e2e_fixture.clean.json  test_api_arts.py  test_api_capacity_plans.py  test_api_compute.py  test_api_dependencies.py  test_api_deps.py  test_api_features.py  test_api_iterations.py  test_api_objectives.py  test_api_pi.py  test_api_risks.py  test_api_smoke.py  test_api_stories.py  test_api_teams.py  test_art_commands.py  test_backlog_commands.py  test_board_commands.py  test_capacity.py  test_capacity_commands.py  test_cli.py  test_dependency_commands.py  test_feature_commands.py  test_models.py  test_objective_commands.py  test_pi_commands.py  test_predictability.py  test_repository.py  test_risk_commands.py  test_story_commands.py  test_team_commands.py  test_wsjf.py
(+52 files in other folders)
